feat: doctor appointment management modules.

--- a/doctor-appointment-booking/pom.xml
+++ b/doctor-appointment-booking/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.practice</groupId>
-	<artifactId>doctor-appointment-booking</artifactId>
+	<artifactId>doctor-appointmentModel-booking</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>doctor-appointment-booking</name>
+	<name>doctor-appointmentModel-booking</name>
 	<description>Demo project for Spring Boot</description>
 	<url/>
 	<licenses>
@@ -43,6 +43,10 @@
 			<groupId>com.mysql</groupId>
 			<artifactId>mysql-connector-j</artifactId>
 			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.datatype</groupId>
+			<artifactId>jackson-datatype-jsr310</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
